// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when the there are messages should show empty input and message list 1`] = `
<div
  className="Chat"
>
  <div
    className="Chat__messages"
  >
    <MessageBubble
      author="Bugs Bunny"
      isOwn={false}
      message="Whats up doc?"
      timestamp="Thu Mar 15 2018"
    />
  </div>
  <div
    className="Chat__new-message-bar"
  >
    <NewMessage
      onMessageSend={[Function]}
    />
  </div>
</div>
`;

exports[`App when the there are no messages should show empty input and empty message list 1`] = `
<div
  className="Chat"
>
  <div
    className="Chat__messages"
  >
    
  </div>
  <div
    className="Chat__new-message-bar"
  >
    <NewMessage
      onMessageSend={[Function]}
    />
  </div>
</div>
`;
